# RM1_Server

./: README.md
app/flask_server/: .gitignore  Dockerfile  README.md  Readme.md  app.ini  config.py  pyproject.toml  requirements.txt  run.py  test_app.py  test_bruteforce.py  test_bruteforce.txt
app/flask_server/.github/workflows/: black.yaml
app/flask_server/app/: __init__.py  db_users.db  forms.py  models.py  role_req.py  routes.py  routes_auth.py  safe_url.py  self_ipadress.py  store_tmp.py
app/flask_server/app/camera/: cam.py  cam_init.py  func_face_det.py  func_face_reco.py  func_nostrill_det.py  func_qr_reader.py  func_stream_cam.py  func_take_pc.py
app/flask_server/app/camera/settings/: camera_settings.json
app/flask_server/app/database/: db_patients.db  db_users.db
app/flask_server/app/graph/: f.ply  graph_app.py
app/flask_server/app/graph/share/: test.stl
app/flask_server/app/robot/: get_data.py
app/flask_server/app/static/css/: authors.css  background.css  con_pan.css  con_pan_face.css  con_pan_show_cam.css  dash.css  font.css  (+20 more)
app/flask_server/app/templates/: 401.html  404.html  authors.html  con_pan.html  con_pan_faceID.html  con_pan_face_pos.html  con_pan_face_scan.html  con_pan_face_val.html  con_pan_show_cam.html  dash.html  documentation.html  home.html  layout.html  menu.html  patient_data.html  patient_find.html  patient_menu.html  patients_searched.html  robot_connect.html  robot_control.html  robot_disconnect.html  robot_inspection.html  sign_in.html  sign_out.html
app/flask_server/app/weather/: weather.csv  weather.py  weather.sh
(+48 files in other folders)
