[tool.poetry]
name = "flask_server"
version = "0.1.0"
description = ""
authors = ["Steigner <200543@seznam.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
uWSGI = "^2.0.19"
Flask-Login = "^0.5.0"
pyrealsense2 = "^2.47.0"
Flask-WTF = "^0.15.1"
SQLAlchemy = "1.4.21"
Flask-SQLAlchemy = "^2.5.1"
pdfkit = "^0.6.1"
pyzbar = "^0.1.8"
face-recognition = "^1.3.0"
open3d = "^0.13.0"
setuptools = "<=57.5.0"
ibm-db-sa = "^0.3.7"
numpy = "^1.22.1"
opencv-python = "^4.5.5"
opencv-contrib-python = "^4.5.5"
black = "^22.1.0"
email-validator = "^1.1.3"
Werkzeug = "2.0.0"
notebook = "^6.4.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"